// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Menu default 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-vertical"
  role="menu"
>
  <div
    class="arco-menu-inner"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Menu set className globally 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-vertical global-default-class"
  role="menu"
>
  <div
    class="arco-menu-inner"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Menu set className globally and component set className itself. 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-vertical component-class"
  role="menu"
>
  <div
    class="arco-menu-inner"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Menu set data-* property 1`] = `
<div
  class="arco-menu arco-menu-light arco-menu-vertical"
  data-test-name="Menu"
  role="menu"
>
  <div
    class="arco-menu-inner"
  />
</div>
`;
